# nyayasetu

./: .gitignore  Dockerfile  README.md  agent.py  app.py  client.py  dashboard.py  environment.py  evaluate.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
data/: cases.json  few_shot_examples.json  test_cases.json  train_cases.json
server/: Dockerfile  __init__.py  app.py  nyayasetu_env_environment.py  quick_test_agent.py  test_agent.py  test_env.py
