[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyayasetu_env"
version = "0.1.0"
description = "NyayaSetu: AI-Powered Legal Aid for Rural India"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.3",
    "gradio==6.11.0",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "groq>=0.4.2",
    "openai>=1.14.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
# Enables: uv run --project . server
server = "server.app:main"

[tool.setuptools]
include-package-data = true
# Finding packages in current and sub-directories
packages = ["server", "data"]
# Since app.py, agent.py, etc are top-level, we keep the root as a package dir
package-dir = { "" = "." }

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.yaml", "Dockerfile"]
